--- a/frontend/src/app/icon-button/icon-button.component.scss
+++ b/frontend/src/app/icon-button/icon-button.component.scss
@@ -1,10 +1,9 @@
 @import '../theme.scss';
 
 .icon-button {
-	cursor: pointer;
 	width: 100%;
 	aspect-ratio: 1 / 1;
-	background: transparent;
+	background: map-get($colours, 'dark');
 	border: 0;
 	font-size: 1.25rem;
 	color: rgba(map-get($colours, 'light'), 0.25);
