--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -1,4 +1,16 @@
 body {
 	margin: 0;
 	padding: 0;
+	font-family: "area-variable", sans-serif;
+	font-variation-settings: 'INKT' 0, 'wght' 400, 'wdth' 100, 'slnt' 0;
+}
+
+button, input, textarea, a {
+	transition: all 0.2s ease-in-out;
+}
+
+button, input {
+	font-family: "area-variable", sans-serif;
+	font-variation-settings: 'INKT' 0, 'wght' 400, 'wdth' 100, 'slnt' 0;
+	cursor: pointer;
 }
