--- a/frontend/src/app/theme.scss
+++ b/frontend/src/app/theme.scss
@@ -1,6 +1,7 @@
 $colours: (
 	primary: #3e0897,
 	secondary: #da00a5,
+	accent: #28f132,
 	success: #28f132,
 	alert: #ea1e3d,
 	warning: #ffa616,
@@ -8,3 +9,13 @@ $colours: (
 	dark: darken(#3e0897, 20%),
 	light: #f4f4f4
 );
+
+@function color-contrast($background-color) {
+	$luminance: (red($background-color) * 0.299 + green($background-color) * 0.587 + blue($background-color) * 0.114) / 255;
+
+	@if $luminance > 0.5 {
+		@return black;
+	} @else {
+		@return white;
+	}
+}
