Tooltip styling and animation

--- a/frontend/src/app/icon-button/icon-button.component.html
+++ b/frontend/src/app/icon-button/icon-button.component.html
@@ -1,4 +1,4 @@
-<app-tooltip [text]="tooltip">
+<app-tooltip [text]="tooltip" position="right">
     <button class="icon-button" (click)="onClick()" [class.icon-button--active]="active" [attr.aria-label]="tooltip">
         <i [class]="iconClass"></i>
     </button>
