Generalise the tabs component so I can use it for nested routes

--- a/frontend/src/app/tabs-container/tabs-container.component.html
+++ b/frontend/src/app/tabs-container/tabs-container.component.html
@@ -1,32 +1,22 @@
 <section class="tabbed-content">
     <nav class="tabs">
         <ul class="tab-list">
-            <li class="tab-list__item" [class.tab--active]="isActive('/chat/home')">
-                <app-icon-button [iconClass]="'fa-solid fa-house-chimney'"
-                        [tooltip]="'Home'"
-                        [active]="isActive('/chat/home')"
-                        (click)="selectTab('/chat/home')">
+            <li *ngFor="let tab of tabs"
+                class="tab-list__item"
+                [class.tab--active]="isActive(tab.route)">
+                <!-- If an icon is specified, render as icon button -->
+                <app-icon-button *ngIf="tab.icon" [iconClass]="tab.icon"
+                        [tooltip]="tab.label"
+                        [active]="isActive(tab.route)"
+                        (click)="selectTab(tab.route)">
                 </app-icon-button>
-            </li>
-            <li class="tab-list__item" [class.tab--active]="isActive('/chat/groups')">
-                <app-icon-button [iconClass]="'fa-solid fa-people-group'"
-                        [tooltip]="'Groups'"
-                        [active]="isActive('/chat/groups')"
-                        (click)="selectTab('/chat/groups')">
-                </app-icon-button>
-            </li>
-            <li class="tab-list__item" [class.tab--active]="isActive('/chat/channels')">
-                <app-icon-button [iconClass]="'fa-solid fa-code-merge'"
-                        [tooltip]="'Channels'"
-                        [active]="isActive('/chat/channels')"
-                        (click)="selectTab('/chat/channels')">
-                </app-icon-button>
-            </li>
-            <li class="tab-list__item">
-                <app-icon-button [iconClass]="'fa-solid fa-left-from-bracket'"
-                        [tooltip]="'Log out'"
-                        (click)="logout()">
-                </app-icon-button>
+                <!-- If no icon is specified, render as text button -->
+                <app-button *ngIf="!tab.icon"
+                        [label]="tab.label"
+                        [classNames]="'tab-list__button'"
+                        [active]="isActive(tab.route)"
+                        (click)="selectTab(tab.route)">
+                </app-button>
             </li>
         </ul>
     </nav>
