--- a/frontend/src/app/tabs-container/tabs-container.component.scss
+++ b/frontend/src/app/tabs-container/tabs-container.component.scss
@@ -3,10 +3,13 @@
 .tabbed-content {
 	display: flex;
 	flex-wrap: nowrap;
+	height: 100%;
 
 	.tabs {
 		width: 3rem;
 		flex-basis: 3rem;
+		height: 100%;
+		background: map-get($colours, 'dark');
 
 		.tab-list {
 			padding: 0;
@@ -21,5 +24,7 @@
 	.tab-content {
 		background: map-get($colours, 'light');
 		flex-grow: 1;
+		box-sizing: border-box;
+		height: 100%;
 	}
 }
