--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -14,3 +14,31 @@ button, input {
 	font-variation-settings: 'INKT' 0, 'wght' 400, 'wdth' 100, 'slnt' 0;
 	cursor: pointer;
 }
+
+h2, h3, h4, strong {
+	font-weight: normal;
+	font-variation-settings: 'wght' 700;
+}
+
+h2, h3, h4 {
+	margin-top: 0;
+	margin-bottom: 0.5rem;
+}
+
+h2 {
+	font-size: 1.5rem;
+}
+
+h3 {
+	font-size: 1rem;
+}
+
+p {
+	font-size: 0.8rem;
+	margin-top: 0;
+	margin-bottom: 0.5rem;
+
+	&:last-child {
+		margin-bottom: 0;
+	}
+}
