Add more data, account for the chat list overflowing by making it scrollable; style the scrollbars with a reusable SCSS mixin

--- a/frontend/src/app/chat-list/chat-list.component.html
+++ b/frontend/src/app/chat-list/chat-list.component.html
@@ -9,7 +9,7 @@
             <div class="chat-list-button__avatar">
                 <img [src]="tab.icon" [alt]="tab.label + ' Avatar'">
             </div>
-            {{ tab.label }}
+            <span class="chat-list-button__label">{{ tab.label }}</span>
         </button>
     </ng-template>
 </div>
