--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -8,10 +8,11 @@
     <footer class="app__footer">
         <app-expandable label="Credits" direction="up">
             <ul>
-                <li>Application by Leesa Ward, student ID s2881107.</li>
+                <li class="author">Application by Leesa Ward, student ID s2881107.</li>
                 <li>Background image by <a href="https://unsplash.com/@pawel_czerwinski?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Pawel Czerwinski</a> on <a href="https://unsplash.com/photos/a-computer-generated-image-of-wavy-lines-JG2DaZZzvzk?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a>.</li>
                 <li>Icons used under licence from <a href="https://fontawesome.com/">Font Awesome</a>.</li>
                 <li>Fonts used under licence from <a href="https://fonts.adobe.com/fonts/area-variable">Adobe Fonts</a>.</li>
+                <li>Album art in mock data sourced from <a href="https://www.discogs.com/">Discogs</a>.</li>
             </ul>
         </app-expandable>
     </footer>
