--- a/frontend/src/app/app.component.scss
+++ b/frontend/src/app/app.component.scss
@@ -83,6 +83,21 @@
 				margin: 0.25rem;
 				font-size: 0.75rem;
 
+				&.author {
+					position: relative;
+					padding-bottom: 0.5rem;
+					margin-bottom: 0.5rem;
+
+					&:after {
+						content: '';
+						position: absolute;
+						bottom: 0;
+						left: 30%;
+						right: 30%;
+						border-bottom: 1px solid rgba(map-get($colours, 'light'), 0.3);
+					}
+				}
+
 				&:last-of-type {
 					margin-bottom: 0;
 				}
