--- a/frontend/src/app/chat-list/chat-list.component.scss
+++ b/frontend/src/app/chat-list/chat-list.component.scss
@@ -8,18 +8,73 @@
 		width: 100%;
 		border: 0;
 		text-align: left;
-		padding: 0.5rem 0.5rem 0.25rem 0.5rem;
+		padding: 0.5rem;
 		border-radius: 0.25rem;
 		font-size: 0.8rem;
 		display: flex;
 		align-items: center;
-		height: 3rem;
 		background: transparent;
+		container-type: inline-size;
+		container-name: button;
+
+		&__avatar {
+			width: 2rem;
+			height: 2rem;
+			flex: 0 0 2rem;
+			border-radius: 50%;
+			margin-right: 0.5rem;
+			overflow: hidden;
+			border: 1px solid darken(map-get($colours, 'light'), 20%);
+			transition: border 0.2s ease-in-out;
+
+			img {
+				width: 100%;
+				height: 100%;
+				object-fit: cover;
+				object-position: center;
+				transition: transform 0.2s ease-in-out;
+			}
+
+			@container button (min-width: 180px) {
+				width: 3rem;
+				height: 3rem;
+				flex-basis: 3rem;
+			}
+		}
+
+		&__label {
+			flex-grow: 1;
+			// Truncate text to 2 lines for long names
+			display: -webkit-box;
+			-webkit-line-clamp: 2;
+			-webkit-box-orient: vertical;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			font-size: 0.7rem;
+			line-height: 1.3;
+
+			@container button (min-width: 180px) {
+				font-size: 0.8rem;
+			}
+		}
 
 		&__active,
 		&:hover, &:focus, &:active {
             background: map-get($colours, 'light');
             color: map-get($colours, 'secondary');
+
+			.chat-list-button__avatar {
+				border: 1px solid darken(map-get($colours, 'light'), 10%);
+			}
         }
+
+		&:hover, &:focus, &:active {
+
+			.chat-list-button__avatar {
+				img {
+					transform: scale(1.2);
+				}
+			}
+		}
 	}
 }
