--- a/frontend/src/app/icon-button/icon-button.component.scss
+++ b/frontend/src/app/icon-button/icon-button.component.scss
@@ -14,5 +14,9 @@
 
 	&--active {
 		color: map-get($colours, 'secondary');
+
+		&:hover, &:focus, &:active {
+			color: map-get($colours, 'secondary');
+		}
 	}
 }
