--- a/frontend/src/app/chat-list/chat-list.component.html
+++ b/frontend/src/app/chat-list/chat-list.component.html
@@ -7,7 +7,8 @@
              [class.chat-list-button__active]="tabsContainer.isActive(tab.route)"
              (click)="tabsContainer.selectTab(tab.route)">
             <div class="chat-list-button__avatar">
-                <img [src]="tab.icon" [alt]="tab.label + ' Avatar'">
+                <img *ngIf="tab.icon" [src]="tab.icon" [alt]="tab.label + ' Avatar'">
+                <i *ngIf="!tab.icon" class="fa-duotone fa-solid fa-comments"></i>
             </div>
             <span class="chat-list-button__label">{{ tab.label }}</span>
         </button>
