--- a/frontend/src/app/chat-list/chat-list.component.scss
+++ b/frontend/src/app/chat-list/chat-list.component.scss
@@ -40,6 +40,25 @@
 				height: 3rem;
 				flex-basis: 3rem;
 			}
+
+			&:has(svg) {
+				display: flex;
+				align-items: center;
+				justify-content: center;
+				background: map-get($colours, 'light');
+
+				svg {
+					width: 1rem;
+					height: 1rem;
+				}
+
+				@container button (min-width: 180px) {
+					svg {
+						width: 1.25rem;
+						height: 1.25rem;
+					}
+				}
+			}
 		}
 
 		&__label {
@@ -52,6 +71,8 @@
 			text-overflow: ellipsis;
 			font-size: 0.7rem;
 			line-height: 1.3;
+			// The font is slightly off vertically, this tweaks it
+			transform: translateY(2px);
 
 			@container button (min-width: 180px) {
 				font-size: 0.8rem;
@@ -61,14 +82,18 @@
 		&__active,
 		&:hover, &:focus, &:active {
             background: map-get($colours, 'light');
-            color: map-get($colours, 'secondary');
 
 			.chat-list-button__avatar {
 				border: 1px solid darken(map-get($colours, 'light'), 10%);
 			}
         }
 
+		&__active {
+			color: map-get($colours, 'secondary');
+		}
+
 		&:hover, &:focus, &:active {
+			color: map-get($colours, 'primary');
 
 			.chat-list-button__avatar {
 				img {
