Improve SCSS functions incl. replacing deprecated division method; consistency in spelling

--- a/frontend/src/app/expandable/expandable.component.scss
+++ b/frontend/src/app/expandable/expandable.component.scss
@@ -6,7 +6,7 @@
 
 	&__toggle {
 		background: map-get($colours, 'primary');
-		color: color-contrast(map-get($colours, 'primary'));
+		color: colour-contrast(map-get($colours, 'primary'));
 		gap: 0.5rem;
 		border: 0;
 		padding: 0.75rem 0.5rem 0.5rem 0.5rem;
