--- a/frontend/src/app/icon-button/icon-button.component.scss
+++ b/frontend/src/app/icon-button/icon-button.component.scss
@@ -6,10 +6,10 @@
 	background: map-get($colours, 'dark');
 	border: 0;
 	font-size: 1.25rem;
-	color: rgba((color-contrast(map-get($colours, 'dark'))), 0.25);
+	color: rgba((colour-contrast(map-get($colours, 'dark'))), 0.25);
 
 	&:hover, &:focus, &:active {
-		color: color-contrast(map-get($colours, 'dark'));
+		color: colour-contrast(map-get($colours, 'dark'));
 	}
 
 	&--active {
