--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -1,1 +1,3 @@
-<p>home works!</p>
+<app-page-content title="Dashboard">
+    <app-message-box [style]="'success'" heading="Welcome to Chatty"></app-message-box>
+</app-page-content>
