--- a/frontend/src/app/message-box/message-box.component.html
+++ b/frontend/src/app/message-box/message-box.component.html
@@ -1,4 +1,4 @@
 <div [class]="'alert alert--' + style">
-    <h3>{{ heading }}</h3>
+    <h3 *ngIf="heading">{{ heading }}</h3>
     <ng-content></ng-content>
 </div>
