--- a/frontend/src/app/logout-screen/logout-screen.component.html
+++ b/frontend/src/app/logout-screen/logout-screen.component.html
@@ -1,6 +1,5 @@
 <app-page-content title="Log out">
-    <app-message-box [style]="'alert'" heading="Sorry, this is the Hotel California chat app.">
-        <p>You can check out any time you like, but you can never leave.</p>
-        <p>...because logout functionality isn't implemented yet.</p>
+    <app-message-box [style]="'warning'" heading="Are you sure you want to log out?">
+        <button class="button--warning" (click)="onLogout()">Log out</button>
     </app-message-box>
 </app-page-content>
