Implement Back button, shown when in a Group or Channel view

--- a/frontend/src/app/chat-list/chat-list.component.html
+++ b/frontend/src/app/chat-list/chat-list.component.html
@@ -2,7 +2,9 @@
     <app-tabs-container [tabs]="tabs"
             [buttonTemplate]="chatListButtonTemplate"
             theme="light"
-            [size]="location === 'sidebar' ? 'wide' : 'fullwidth'">
+            [size]="location === 'sidebar' ? 'wide' : 'fullwidth'"
+            [showBackButton]="showBackButton"
+    >
     </app-tabs-container>
 
     <!-- Template to use for the buttons in the tabs in this context -->
