--- a/frontend/src/app/chat-window/chat-window.component.html
+++ b/frontend/src/app/chat-window/chat-window.component.html
@@ -5,7 +5,8 @@
         <app-chat-list
                 *ngIf="type === 'group' && subTabs.length > 0"
                 location="window"
-                [tabs]="subTabs">
+                [tabs]="subTabs"
+        >
         </app-chat-list>
     </app-page-content>
 </ng-template>
