--- a/frontend/src/app/back-button/back-button.component.scss
+++ b/frontend/src/app/back-button/back-button.component.scss
@@ -1,4 +1,5 @@
-@import '../theme.scss';
+@import '../_common-styles/theme';
+@import '../_common-styles/animation';
 
 .back-button {
 	display: flex;
@@ -25,20 +26,5 @@
 		svg {
 			animation: move-left 1.25s infinite;
 		}
-	}
-}
-
-@keyframes move-left {
-	0% {
-		transform: translateX(0);
-		opacity: 0;
-	}
-	50% {
-		transform: translateX(-0.5rem);
-		opacity: 1;
-	}
-	100% {
-		transform: translateX(0);
-		opacity: 0;
 	}
 }
